force-app/main/default/objects/CatalogJobConfig__mdt/CatalogJobConfig__mdt.object-meta.xml
<CustomObject>
    <description>Configuration for running ProductCatalogExportBatch against Coveo catalog sources.</description>
    <label>Catalog Job Configuration</label>
    <pluralLabel>Catalog Job Configurations</pluralLabel>
</CustomObject>