force-app/main/default/objects/CatalogJobConfig__mdt/fields/AdditionalProductFields__c.field-meta.xml
<CustomField>
    <fullName>AdditionalProductFields__c</fullName>
    <description>Comma-separated list of extra Product2 field API names to query and send to Coveo.
          Example: Brand__c,Color__c,Gender__c</description>
    <label>Additional Product Fields</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>