force-app/main/default/objects/CatalogJobConfig__mdt/fields/AvailabilitySourceId__c.field-meta.xml
<CustomField>
    <fullName>AvailabilitySourceId__c</fullName>
    <description>Coveo availability source ID paired with this catalog job. Used when exporting Buyer Group visibility as Availability items.</description>
    <label>Availability Source Id</label>
    <length>80</length>
    <type>Text</type>
</CustomField>