force-app/main/default/objects/CatalogJobConfig__mdt/fields/BaselineFullConfigDeveloperName__c.field-meta.xml
<CustomField>
    <fullName>BaselineFullConfigDeveloperName__c</fullName>
    <description>For delta sync configs, identifies the full-sync CatalogJobConfig__mdt record that establishes the trusted export baseline.</description>
    <inlineHelpText>Required for Delta sync mode. Enter the DeveloperName of the matching Full sync configuration.</inlineHelpText>
    <label>Baseline Full Config Developer Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>