force-app/main/default/objects/CatalogJobConfig__mdt/fields/BatchSize__c.field-meta.xml
<CustomField>
    <fullName>BatchSize__c</fullName>
    <defaultValue>50</defaultValue>
    <description>Number of records to process per batch. Lower values reduce memory usage but increase total execution time. Recommended: 25-50 for large AdditionalProductFields__c payloads.</description>
    <label>Batch Size</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>