force-app/main/default/objects/CatalogJobConfig__mdt/fields/BuilderType__c.field-meta.xml
<CustomField>
    <fullName>BuilderType__c</fullName>
    <description>Specifies which CatalogJsonBuilder implementation to use for this catalog. Options: Default (simple products), Commerce (standard commerce), Grouping (product groupings), Variant (product variants), GroupingWithVariants (combined). If not specified, falls back to the Active builder mapping.</description>
    <label>Builder Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>