force-app/main/default/objects/CatalogJobConfig__mdt/fields/BuyerGroupAvailabilityMode__c.field-meta.xml
<CustomField>
    <fullName>BuyerGroupAvailabilityMode__c</fullName>
    <description>Controls how Buyer Group visibility is indexed. Supported values are Disabled, PairedSource, and Embedded. Blank values fall back to the legacy EnableBuyerGroupAvailability__c behavior.</description>
    <inlineHelpText>Disabled, PairedSource, or Embedded. Leave blank only for legacy configs that still rely on EnableBuyerGroupAvailability__c.</inlineHelpText>
    <label>Buyer Group Availability Mode</label>
    <length>40</length>
    <type>Text</type>
</CustomField>