force-app/main/default/objects/CatalogJobConfig__mdt/fields/CatalogId__c.field-meta.xml
<CustomField>
    <fullName>CatalogId__c</fullName>
    <description>The Salesforce ProductCatalog ID to filter products. When specified, only products associated with this catalog (via ProductCategory → ProductCategoryProduct) will be exported.</description>
    <label>Catalog ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>