force-app/main/default/objects/CatalogJobConfig__mdt/fields/CoveoOrgId__c.field-meta.xml
<CustomField>
    <fullName>CoveoOrgId__c</fullName>
    <description>Coveo organization ID used for this catalog job.</description>
    <label>Coveo Org Id</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>