force-app/main/default/objects/CatalogJobConfig__mdt/fields/EnableBuyerGroupAvailability__c.field-meta.xml
<CustomField>
    <fullName>EnableBuyerGroupAvailability__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When enabled, the job can export Buyer Group product visibility to a paired Coveo Availability source.</description>
    <inlineHelpText>Enable a paired availability export for Buyer Group entitlements.</inlineHelpText>
    <label>Enable Buyer Group Availability</label>
    <type>Checkbox</type>
</CustomField>