force-app/main/default/objects/CatalogJobConfig__mdt/fields/EnablePayloadLogging__c.field-meta.xml
<CustomField>
    <fullName>EnablePayloadLogging__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Feature flag to enable payload logging. When enabled, each batch execution will create a Coveo_Payload_Log__c record for troubleshooting. Default is OFF to minimize queueable job usage.</description>
    <inlineHelpText>Enable payload logging for troubleshooting. Creates a log record per batch execution via Queueable job.</inlineHelpText>
    <label>Enable Payload Logging</label>
    <type>Checkbox</type>
</CustomField>