force-app/main/default/objects/CatalogJobConfig__mdt/fields/IsActive__c.field-meta.xml
<CustomField>
    <fullName>IsActive__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Whether this catalog job configuration is active.</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>