force-app/main/default/objects/CatalogJobConfig__mdt/fields/Locale__c.field-meta.xml
<CustomField>
    <fullName>Locale__c</fullName>
    <description>Locale or language associated with this catalog (e.g. en-US).</description>
    <label>Locale</label>
    <length>20</length>
    <type>Text</type>
</CustomField>