force-app/main/default/objects/CatalogJobConfig__mdt/fields/PricebookIds__c.field-meta.xml
<CustomField>
    <fullName>PricebookIds__c</fullName>
    <description>Comma-separated Pricebook2 IDs to include in product exports. Takes precedence over Web Store IDs. When both fields are blank, all active pricebook entries are exported.</description>
    <label>Pricebook IDs</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>