force-app/main/default/objects/CatalogJobConfig__mdt/fields/ProductFilter__c.field-meta.xml
<CustomField>
    <fullName>ProductFilter__c</fullName>
    <description>Additional WHERE clause for Product2 query (without WHERE keyword).</description>
    <label>Product Filter</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>