force-app/main/default/objects/CatalogJobConfig__mdt/fields/SourceId__c.field-meta.xml
<CustomField>
    <fullName>SourceId__c</fullName>
    <description>Coveo catalog source ID targeted by this job.</description>
    <label>Source Id</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>