force-app/main/default/objects/CatalogJobConfig__mdt/fields/SyncMode__c.field-meta.xml
<CustomField>
    <fullName>SyncMode__c</fullName>
    <defaultValue>"Full"</defaultValue>
    <description>Controls whether the product sync runs as a full baseline refresh or as a delta refresh that depends on a trusted full baseline.</description>
    <inlineHelpText>Supported values: Full or Delta. Blank values fall back to Full.</inlineHelpText>
    <label>Sync Mode</label>
    <length>20</length>
    <type>Text</type>
</CustomField>