force-app/main/default/objects/CatalogJobConfig__mdt/fields/WebStoreId__c.field-meta.xml
<CustomField>
    <fullName>WebStoreId__c</fullName>
    <description>Salesforce WebStore ID used to resolve Buyer Groups and product entitlements for the paired availability export.</description>
    <label>Web Store Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>