force-app/main/default/objects/CatalogJobConfig__mdt/fields/WebStoreIds__c.field-meta.xml
<CustomField>
    <fullName>WebStoreIds__c</fullName>
    <description>Comma-separated WebStore IDs used to resolve associated pricebooks and multi-store Buyer Group availability. Pricebook IDs take precedence for price resolution.</description>
    <label>Web Store IDs</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>